# learn-llvm

./: .gitignore  .gitmodules  README.md  compile_full.sh
tinylang/: CMakeLists.txt  compile_standalone.sh
tinylang/cmake/modules/: AddTinylang.cmake
tinylang/include/tinylang/Basic/: Version.h
tinylang/lib/Basic/: CMakeLists.txt  Version.cpp
tinylang/tools/driver/: CMakeLists.txt  Driver.cpp
